--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,13 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
+    compile files('libs/universal-image-loader-1.9.3-with-sources.jar')
+    compile files('libs/fastjson-1.2.5.jar')
+    compile 'com.ogaclejapan.smarttablayout:library:1.1.3@aar'
+    compile 'com.ogaclejapan.smarttablayout:utils-v4:1.1.3@aar'
+    compile files('libs/android-support-v7-recyclerview.jar')
+    compile 'com.android.support:cardview-v7:21.0.2'
+    compile files('libs/butterknife-6.1.0.jar')
+    compile project(':circualreveal')
+
 }
